[tool.poetry]
name = "metworkpy"
version = "0.0.1"
description = "Tools for creating and working with network models of metabolism."
authors = ["Braden Griebel <bgriebel@uw.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://metworkpy.readthedocs.io/en/latest/"
repository = "https://github.com/Braden-Griebel/metworkpy"
documentation = "https://metworkpy.readthedocs.io/en/latest/"
keywords = ["FBA", "metabolism", "IMAT", "metchange"]

[tool.poetry.scripts]
imatgen = 'metworkpy.scripts.imatgen:run'

[tool.poetry.dependencies]
python = "^3.9"
cobra = "^0.29.0"
scipy = "^1.12.0"
networkx = "^3.2.1"
pandas = "^2.2.0"
numpy = "^1.26.4"
optlang = "^1.8.1"
sympy = "^1.12"
cplex = { version = "^22.1.1.1", optional = true }
gurobipy = { version = "^11.0.0", optional = true }
pyarrow = "^16.1.0"
tqdm = "^4.66.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.2"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.0.1"


[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx-exec-code = "^0.12"
sphinx-rtd-theme = "^2.0.0"
jupyter = "^1.0.0"

[tool.poetry.extras]
gurobipy = ["gurobipy"]
cplex = ["cplex"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Stopping Gurobi warning originating from optlang
[tool.pytest.ini_options]
filterwarnings = [
    'ignore:.+pass a TempConstr or use Model.addLConstr:DeprecationWarning'
]

# Setup ruff
[tool.ruff]
line-length=88

