[project]
name = "metworkpy-example"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
  "highspy>=1.10.0",
  "iplotx>=1.7.1",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.8",
  "metworkpy",
  "networkx>=3.4.2",
  "numpy>=2.2.4",
  "openpyxl>=3.1.5",
  "osqp>=1.0.3",
  "pandas>=2.2.3",
  "scipy>=1.15.2",
]

[tool.uv.sources]
metworkpy = { path = ".." }
